Po 2360 po 2361 pdpl logging on get draft accounts (#1509)
* PO-2360-PO-2361-PDPL-logging-on-GET-draft-accounts

initial commit

* PO-2360-PO-2361-PDPL-logging-on-GET-draft-accounts

commit test

* PO-2360-PO-2361-PDPL-logging-on-GET-draft-accounts

updated tests broken in this change and added extra tests for GET

* PO-2360-PO-2361-PDPL-logging-on-GET-draft-accounts

remove Println

* PO-2360-PO-2361-PDPL-logging-on-GET-draft-accounts

moved logic from draft account transactional back to the service layer to avoid unfiltered logs being sent.

* PO-2360-PO-2361-PDPL-logging-on-GET-draft-accounts

updated get ip address and now get user id from userState

* PO-2360-PO-2361-PDPL-logging-on-GET-draft-accounts

moved GET and fixed tests

* PO-2360-PO-2361-PDPL-logging-on-GET-draft-accounts

refactored code to pass in Userstate to PDPL logging. also updated tests and verified all integration and unit tests pass.

* PO-2360-PO-2361-PDPL-logging-on-GET-draft-accounts

updated tests to verify what is being passed to pdpl and added in comments that were wrongly removed

* PO-2360-PO-2361-PDPL-logging-on-GET-draft-accounts

fixed issues after merge

* Test fixes

* Checkstyle

* Updates - PO-2360

* fixes

* Missing step

* PO-2361

made changes after QA, updated tests and logic.

* PO-2361

fixed broken tests - updated CommonDraftAccountControllerIntegrationTest to run sql before class as the scripts werent running before

* Get multiple accounts logging tests

* Get multiple accounts logging tests

* Renaming tests + fixed static url

* Fixed failing test

---------

Co-authored-by: stephenmagill <163827638+stephenmagill@users.noreply.github.com>
Co-authored-by: stephen.magill <stephen.magill@cgi.com>
Co-authored-by: jonathanDuffy <jonathan.duffy@cgi.com>